# SLF4cpp

./: CMakeLists.txt  LICENSE  SLF4cpp.sln  readme.md
SLF4cpp/: ReadMe.txt  SLF4cpp.cpp  SLF4cpp.vcxproj  SLF4cpp.vcxproj.filters  config.h  slf4cpp.h  slf_cast.h  slf_enum.h  slf_format.h  slf_log_provider.h  slf_main.h  slf_memory.h  slf_string.h  slf_time_format.h  slf_utils.h  stdafx.cpp  templae_func.h
Simple/: easyloggingpp_provider.h  plog_provider.h
Test/: CMakeLists.txt  SLF4cpp.cpp
